To do list application by Saadat Ali

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List - the Code School</title>
+    <title>To-Do List Application by Saadat Ali</title>
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="row">
                 <input type="text" name="" id="input-box" placeholder="Add your Text">
                 <button onclick="addTask()">Add Task</button>
-            </div>
+            </div>s
 
             <ul id="list-container">
                 <!-- <li class="checked">Task 1</li>
